unpackaged/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <description>Represents a single law firm. This Partner may be related to one or more Campaigns via the Campaign Partner junction object.</description>
    <label>Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>