unpackaged/main/default/objects/Partner__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>