unpackaged/main/default/objects/Partner__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>