unpackaged/main/default/objects/Partner__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Phone__c</columns>
    <columns>Primary_Contact_First_Name__c</columns>
    <columns>Primary_Contact_Email__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Partners</label>
</ListView>