unpackaged/main/default/objects/Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Primary_Contact_First_Name__c</columns>
    <columns>Primary_Contact_Email__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>